--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     <script src="./p5.js"></script>
   		<script src="./rough.js"></script>
   <script src="./sketch.js"></script>
+  <script src="./carve2.js"></script>
 		<script src="./drawMountainLine.js"></script>
   </head>
   <body>
